# transferwee

./: .gitignore  .travis.yml  Dockerfile  README.md  TODO.md  pyproject.toml  requirements.txt  transferwee.py  transferwee.spec
.github/workflows/: codeql-analysis.yml  conftest.yml  mdformat.yml  pypi.yml  python-app.yml  python.yml  python38.yml  semgrep.yml  windows_exe_release.yml
tests/: check.sh
