[tool.poetry]
name = "transferwee"
version = "1.0.0"
description = "Simple Python 3 script to download/upload files via wetransfer.com"
authors = ["Leonardo Taccari"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# honor PEP 8
line-length = 79
